# stainkit

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SUBMISSION.md  colab_notebook.ipynb  install.sh  lightning_app.py  lightning_app_unified.py  modal_app.py  run.sh
.github/workflows/: ci.yml  keep-alive.yml
data/: README.md
data/benchmark/: .gitkeep  sample_run_256.csv  sample_run_512.csv
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: algorithms.md  api.md  architecture.md  benchmarks.md  docker.md  hosting.md  screenshots.md
huggingface/: Dockerfile  README.md  app.py  requirements.txt
include/stainkit/: cpu_reference.h  io.h  pipeline.h  types.h
include/stainkit/kernels/: color_deconvolution.h  morphology.h  od_conversion.h  stain_normalization.h  tissue_mask.h
python/gpustain/: __init__.py
python/gpustain/tests/: __init__.py  test_gpustain.py
scripts/: benchmark.py  bundle_proof_of_execution.py  download_pcam.py  download_tcga.py  generate_sample_artifacts.py  generate_sample_data.py  generate_sample_gallery.py  setup_colab.sh
src/: cpu_reference.cpp  io.cpp  main.cpp  pipeline.cpp  types.cpp
src/benchmarks/: bench_pipeline.cpp
src/bindings/: bindings.cpp
src/kernels/: color_deconvolution.cu  morphology.cu  od_conversion.cu  stain_normalization.cu  tissue_mask.cu
tests/: CMakeLists.txt  test_cpu_reference.cpp  test_io.cpp  test_kernels.cu  test_pipeline.cpp  test_python_bindings.cpp  test_types.cpp
